# legged_lab

./: .gitmodules  README.md  pyproject.toml
mujoco_mjx/: README.md  pyproject.toml
mujoco_mjx/configs/: g1_rsl_rl_mjx_amp.yaml
mujoco_mjx/rsl_rl_mujoco/: __init__.py  constants.py  model.py  native_env.py  native_math.py  native_model.py  native_motion.py  native_optim.py  native_physics.py  native_symmetry.py  native_trainer.py  native_video.py  spec.py  terrain.py
mujoco_mjx/scripts/: compare_isaac_control_probe.py  convert_pt_to_jax.py  train_native_jax.py  verify_pt_jax_parity.py
mujoco_mjx/tests/: test_contract.py
scripts/rsl_rl/: benchmark_models.py  cli_args.py  curriculum_video.py  debug_terrain_runtime.py  diagnose_g1_control.py  play.py  play_actor_keyboard.py  play_actor_mujoco_keyboard.py  play_bc_keyboard.py  train.py  train_bc.py  visualize_height_scan.py
scripts/tools/: generate_wfc_terrain.py
scripts/tools/motionbricks/: convert_motionbricks_to_legged_lab.py  convert_motionbricks_to_legged_lab_fast.py
source/legged_lab/legged_lab/data/Robots/Unitree/g1_29dof/usd/g1_29dof_articulated_head_backpack/: .asset_hash  config.yaml  g1_29dof_articulated_head_backpack.usd
source/legged_lab/legged_lab/data/Robots/Unitree/g1_29dof/usd/g1_29dof_articulated_head_backpack/configuration/: g1_29dof_articulated_head_backpack_base.usd  g1_29dof_articulated_head_backpack_physics.usd  g1_29dof_articulated_head_backpack_robot.usd  g1_29dof_articulated_head_backpack_sensor.usd
source/legged_lab/legged_lab/envs/: manager_based_amp_env.py
source/legged_lab/legged_lab/managers/: motion_data_manager.py  motion_data_term_cfg.py
source/legged_lab/legged_lab/rsl_rl/: __init__.py  amp_cfg.py  rl_cfg.py
source/legged_lab/legged_lab/tasks/locomotion/amp/: amp_env_cfg.py
source/legged_lab/legged_lab/tasks/locomotion/amp/config/g1/: README_amp_height_scan_model.md  README_amp_wfc_terrain.md  README_isaac_terrain_experts.md  __init__.py  g1_amp_env_cfg.py
source/legged_lab/legged_lab/tasks/locomotion/amp/config/g1/agents/: rsl_rl_ppo_cfg.py
source/legged_lab/legged_lab/tasks/locomotion/amp/mdp/: __init__.py  curriculums.py  observations.py  rewards.py  terminations.py
source/legged_lab/legged_lab/tasks/locomotion/amp/mdp/symmetry/: g1.py
source/legged_lab/legged_lab/terrains/: __init__.py  staged_curriculum.py  wfc_custom_tiles.py  wfc_generator.py
source/legged_lab/test/: test_g1_height_scan_symmetry.py
