[project]
name = "legged-lab-mjx"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "jax[cuda13]==0.10.2",
    "joblib>=1.4",
    "mujoco-mjx[warp]==3.10.0",
    "numpy==2.4.6",
    "opencv-python-headless>=4.10",
    "pyyaml>=6",
    "rtree>=1.3",
    "scipy>=1.14",
    "trimesh>=4.4",
    "wandb>=0.17",
]

[project.optional-dependencies]
wfc = [
    "perlin-numpy @ git+https://github.com/pvigier/perlin-numpy",
    "terrain-generator",
]

[tool.uv]
package = false

[tool.uv.sources]
terrain-generator = { path = "../third_party/terrain-generator", editable = true }
